--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
+<html lang="pt-BR">
 <head>
-    <body>
-        <h1>MOVIE1X</h1>
-        <p>Site de Reviews,Gameplays,Notícias sobre Games e outros Conteúdos</p>
-        <h2> Categoria 1:Reviews e Gameplays</h2>
-        
-    </body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Site de Games</title>
 </head>
+<body>
+    <head>
+        
+    </head>
+</body>
+</html>
