--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title> Site de Games</title>
 </head>
 <body>
-  
+  <header>
+    <title> Aprendendo sobre Games</title>
+    
+  </header>
 </body>
 </html>
