--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
   <header>
     <title> Aprendendo sobre Games</title>
-    
+
+    <h3>Esse site é sobre reviws e sobre jogos!</h3>
   </header>
 </body>
 </html>
