--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Site de Games</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> Site de Games</title>
 </head>
+
 <body>
   <header>
-    <title> Aprendendo sobre Games</title>
-
-    <h3>Esse site é sobre reviws e sobre jogos!</h3>
+    <h1>Esse site é sobre reviws e sobre jogos!</h1>
   </header>
+  <h3>Você já viu todos os novos jogos que está em destaque?</h3>
+  <p> Venha conferir!</p>
+  <h2>JOGOS QUE ESTÃO EM DESTAQUE:</h2>
 </body>
+
 </html>
