--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <h3>Você já viu todos os novos jogos que está em destaque?</h3>
   <p> Venha conferir!</p>
   <h2>JOGOS QUE ESTÃO EM DESTAQUE:</h2>
+  <h1> Em #1 Lugar: Black Myth: Wukong</h1>
 </body>
 
 </html>
