--- a/index.html
+++ b/index.html
@@ -1,20 +1,52 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Site de Games</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Review de Jogos</title>
+    <link rel="stylesheet" href="Estilo.css">
 </head>
-
 <body>
-  <header>
-    <h1>Esse site é sobre reviws e sobre jogos!</h1>
-  </header>
-  <h3>Você já viu todos os novos jogos que está em destaque?</h3>
-  <p> Venha conferir!</p>
-  <h2>JOGOS QUE ESTÃO EM DESTAQUE:</h2>
-  <h1> Em #1 Lugar: Black Myth: Wukong</h1>
-</body>
+    <header>
+        <h1>Review de Jogos</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Início</a></li>
+                <li><a href="#reviews">Reviews</a></li>
+                <li><a href="#noticias">Notícias</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <section id="home">
+        <div class="banner">
+            <h2>Bem-vindo ao melhor site de reviews de jogos!</h2>
+        </div>
+    </section>
+
+    <section id="reviews">
+        <h2>Últimos Reviews</h2>
+        <div class="game-review">
+            <h3>Nome do Jogo</h3>
+            <p>Descrição do jogo e opinião.</p>
+        </div>
+        <div class="game-review">
+            <h3>Nome do Jogo 2</h3>
+            <p>Descrição do jogo e opinião.</p>
+        </div>
+    </section>
+
+    <section id="noticias">
+        <h2>Notícias Recentes</h2>
+        <div class="news">
+            <h3>Título da Notícia</h3>
+            <p>Resumo da notícia.</p>
+        </div>
+    </section>
+
+    <footer>
+        <p>Copyright © 2024 Review de Jogos. Todos os direitos reservados.</p>
+    </footer>
+</body>
 </html>
