--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Review de Jogos</title>
-    <link rel="stylesheet" href="Estilo.css">
+    <title>Review de Jogos e Gameplays</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Review de Jogos</h1>
+        <h1>Review de Jogos e Gameplays</h1>
         <nav>
             <ul>
                 <li><a href="#home">Início</a></li>
                 <li><a href="#reviews">Reviews</a></li>
-                <li><a href="#noticias">Notícias</a></li>
+                <li><a href="#gameplays">Gameplays</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
@@ -21,7 +21,7 @@
 
     <section id="home">
         <div class="banner">
-            <h2>Bem-vindo ao melhor site de reviews de jogos!</h2>
+            <h2>Os melhores reviews e gameplays de jogos!</h2>
         </div>
     </section>
 
@@ -30,23 +30,33 @@
         <div class="game-review">
             <h3>Nome do Jogo</h3>
             <p>Descrição do jogo e opinião.</p>
+            <!-- Adicionando vídeo local ou do YouTube -->
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/código_do_video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </div>
         <div class="game-review">
             <h3>Nome do Jogo 2</h3>
             <p>Descrição do jogo e opinião.</p>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/código_do_video2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </div>
     </section>
 
-    <section id="noticias">
-        <h2>Notícias Recentes</h2>
-        <div class="news">
-            <h3>Título da Notícia</h3>
-            <p>Resumo da notícia.</p>
+    <section id="gameplays">
+        <h2>Últimos Gameplays</h2>
+        <div class="gameplay">
+            <h3>Gameplay de Nome do Jogo</h3>
+            <p>Assista ao gameplay completo aqui!</p>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/código_do_gameplay" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </div>
     </section>
 
     <footer>
-        <p>Copyright © 2024 Review de Jogos. Todos os direitos reservados.</p>
+        <p>Copyright © 2024 Review de Jogos e Gameplays. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
