--- a/index.html
+++ b/index.html
@@ -1,67 +1,51 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Zone - Reviews e Gameplays</title>
+    <title>GameHub - Reviews e Gameplays</title>
     <link rel="stylesheet" href="Estilo.css">
 </head>
 <body>
     <header>
+        <h1>GameHub</h1>
         <nav>
-            <h1>Game Zone</h1>
             <ul>
                 <li><a href="#reviews">Reviews</a></li>
                 <li><a href="#gameplays">Gameplays</a></li>
-                <li><a href="#noticias">Notícias</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="hero">
-        <h2>Bem-vindo ao Game Zone</h2>
-        <p>Seu destino para as últimas reviews e gameplays de seus jogos favoritos!</p>
-        <button>Leia mais</button>
+        <h2>Bem-vindo ao GameHub</h2>
+        <p>O melhor lugar para encontrar reviews e gameplays dos seus jogos favoritos!</p>
+        <button id="cta-button">Explorar Agora</button>
     </section>
 
     <section id="reviews">
-        <h2>Últimas Reviews</h2>
-        <div class="review-card">
-            <img src="jogo1.jpg" alt="Jogo 1">
-            <h3>Jogo 1</h3>
-            <p>Review completa do Jogo 1...</p>
-        </div>
-        <div class="review-card">
-            <img src="jogo2.jpg" alt="Jogo 2">
-            <h3>Jogo 2</h3>
-            <p>Review completa do Jogo 2...</p>
-        </div>
+        <h2>Últimos Reviews</h2>
+        <article>
+            <h3>Review do Jogo X</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vehicula libero a nunc facilisis.</p>
+            <button>Leia Mais</button>
+        </article>
     </section>
 
     <section id="gameplays">
-        <h2>Últimas Gameplays</h2>
-        <div class="video-card">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
-            <h3>Gameplay de Jogo 1</h3>
-        </div>
-        <div class="video-card">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
-            <h3>Gameplay de Jogo 2</h3>
-        </div>
-    </section>
-
-    <section id="noticias">
-        <h2>Notícias Recentes</h2>
+        <h2>Últimos Gameplays</h2>
         <article>
-            <h3>Notícia 1</h3>
-            <p>Detalhes sobre a última notícia do mundo dos games...</p>
+            <h3>Gameplay do Jogo Y</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus consequat nisi a quam condimentum.</p>
+            <button>Assista Agora</button>
         </article>
     </section>
 
     <footer>
-        <p>© 2024 Game Zone. Todos os direitos reservados.</p>
-        <p><a href="#contato">Contato</a></p>
+        <p>&copy; 2024 GameHub. Todos os direitos reservados.</p>
     </footer>
+
+    <script src="Java Script.js"></script>
 </body>
 </html>
