--- a/index.html
+++ b/index.html
@@ -3,48 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GameHub - Reviews e Gameplays</title>
-    <link rel="stylesheet" href="Estilo.css">
+    <title>Site de Games</title>
+    <link rel="stylesheet" href="Estilo.css"> <!-- Link para o CSS -->
 </head>
 <body>
     <header>
-        <h1>GameHub</h1>
+        <h1>Bem-vindo ao Site de Games!</h1>
         <nav>
             <ul>
-                <li><a href="#reviews">Reviews</a></li>
-                <li><a href="#gameplays">Gameplays</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="gameplays.html">Gameplays</a></li>
             </ul>
         </nav>
     </header>
+    
+    <main>
+        <section id="reviews">
+            <h2>Reviews de Jogos</h2>
+            <div class="review">
+                <h3>Silent Hill 2 Remake</h3>
+                <p>Silent Hill 2 Remake é uma reimaginação do clássico jogo de terror. Com gráficos impressionantes e uma narrativa envolvente, este remake traz de volta os horrores da cidade de Silent Hill com uma nova perspectiva.</p>
+                <p><strong>Nota:</strong> ★★★★★</p>
+            </div>
+            <!-- Outros reviews podem ser adicionados aqui -->
+        </section>
 
-    <section id="hero">
-        <h2>Bem-vindo ao GameHub</h2>
-        <p>O melhor lugar para encontrar reviews e gameplays dos seus jogos favoritos!</p>
-        <button id="cta-button">Explorar Agora</button>
-    </section>
-
-    <section id="reviews">
-        <h2>Últimos Reviews</h2>
-        <article>
-            <h3>Review do Jogo X</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vehicula libero a nunc facilisis.</p>
-            <button>Leia Mais</button>
-        </article>
-    </section>
-
-    <section id="gameplays">
-        <h2>Últimos Gameplays</h2>
-        <article>
-            <h3>Gameplay do Jogo Y</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus consequat nisi a quam condimentum.</p>
-            <button>Assista Agora</button>
-        </article>
-    </section>
+        <section id="gameplays">
+            <h2>Gameplays Recentes</h2>
+            <!-- Adicione informações sobre gameplays aqui -->
+        </section>
+    </main>
 
     <footer>
-        <p>&copy; 2024 GameHub. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Seu Nome. Todos os direitos reservados.</p>
     </footer>
-
-    <script src="Java Script.js"></script>
+    
+    <script src="Java Script.js"></script> <!-- Link para o JavaScript -->
 </body>
 </html>
