--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     </header>
     
     <main>
-        <section id="reviews">
+        <section id="reviews e jogo lançados Recentemente">
             <h2>Reviews de Jogos</h2>
             <div class="review">
-                <h3>Silent Hill 2 Remake</h3>
+                <h2>1-Silent Hill 2 Remake</h2>
                 <p>Silent Hill 2 Remake é uma reimaginação do clássico jogo de terror. Com gráficos impressionantes e uma narrativa envolvente, este remake traz de volta os horrores da cidade de Silent Hill com uma nova perspectiva.</p>
                 <p><strong>Nota:</strong> ★★★★★</p>
             </div>
