--- a/index.html
+++ b/index.html
@@ -19,14 +19,39 @@
     </header>
     
     <main>
-        <section id="reviews e jogo lançados Recentemente">
+        <section id="reviews">
             <h2>Reviews de Jogos</h2>
+            
             <div class="review">
-                <h2>1-Silent Hill 2 Remake</h2>
+                <h2>Silent Hill 2 Remake</h2>
                 <p>Silent Hill 2 Remake é uma reimaginação do clássico jogo de terror. Com gráficos impressionantes e uma narrativa envolvente, este remake traz de volta os horrores da cidade de Silent Hill com uma nova perspectiva.</p>
                 <p><strong>Nota:</strong> ★★★★★</p>
             </div>
-            <!-- Outros reviews podem ser adicionados aqui -->
+
+            <div class="review">
+                <h2>Sonic x Shadow Generations</h2>
+                <p>Sonic x Shadow Generations combina a velocidade frenética de Sonic com a complexidade do universo de Shadow, oferecendo uma nova experiência aos fãs. A jogabilidade e a narrativa se entrelaçam de forma envolvente.</p>
+                <p><strong>Nota:</strong> ★★★★☆</p>
+            </div>
+
+            <div class="review">
+                <h2>Dragon Ball Sparking!</h2>
+                <p>Dragon Ball Sparking! traz uma luta épica entre personagens icônicos do anime. Com gráficos vibrantes e combates dinâmicos, é um deleite para os fãs da série.</p>
+                <p><strong>Nota:</strong> ★★★★☆</p>
+            </div>
+
+            <div class="review">
+                <h2>Assassin's Creed: Shadows</h2>
+                <p>Assassin's Creed: Shadows leva os jogadores a uma nova era de assassinatos furtivos. Com gráficos impressionantes e uma história rica, é uma adição emocionante à série.</p>
+                <p><strong>Nota:</strong> ★★★★★</p>
+            </div>
+
+            <div class="review">
+                <h2>Star Wars Outlaws</h2>
+                <p>Star Wars Outlaws coloca os jogadores no papel de um contrabandista em uma galáxia distante, oferecendo uma nova perspectiva sobre o universo de Star Wars. A jogabilidade é envolvente e repleta de ação.</p>
+                <p><strong>Nota:</strong> ★★★★★</p>
+            </div>
+
         </section>
 
         <section id="gameplays">
