--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site de Games</title>
+    <title>Reviews de Jogos</title>
     <link rel="stylesheet" href="Estilo.css"> <!-- Link para o CSS -->
 </head>
 <body>
     <header>
-        <h1>Bem-vindo ao Site de Games!</h1>
+        <h1>Reviews de Jogos</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -23,40 +23,40 @@
             <h2>Reviews de Jogos</h2>
             
             <div class="review">
-                <h2>Silent Hill 2 Remake</h2>
+                <h3>Silent Hill 2 Remake</h3>
+                <img src="images/silent_hill.jpg" alt="Silent Hill 2 Remake" class="review-image">
                 <p>Silent Hill 2 Remake é uma reimaginação do clássico jogo de terror. Com gráficos impressionantes e uma narrativa envolvente, este remake traz de volta os horrores da cidade de Silent Hill com uma nova perspectiva.</p>
                 <p><strong>Nota:</strong> ★★★★★</p>
             </div>
 
             <div class="review">
-                <h2>Sonic x Shadow Generations</h2>
+                <h3>Sonic x Shadow Generations</h3>
+                <img src="images/sonic_shadow.jpg" alt="Sonic x Shadow Generations" class="review-image">
                 <p>Sonic x Shadow Generations combina a velocidade frenética de Sonic com a complexidade do universo de Shadow, oferecendo uma nova experiência aos fãs. A jogabilidade e a narrativa se entrelaçam de forma envolvente.</p>
                 <p><strong>Nota:</strong> ★★★★☆</p>
             </div>
 
             <div class="review">
-                <h2>Dragon Ball Sparking!</h2>
+                <h3>Dragon Ball Sparking!</h3>
+                <img src="images/dragon_ball.jpg" alt="Dragon Ball Sparking!" class="review-image">
                 <p>Dragon Ball Sparking! traz uma luta épica entre personagens icônicos do anime. Com gráficos vibrantes e combates dinâmicos, é um deleite para os fãs da série.</p>
                 <p><strong>Nota:</strong> ★★★★☆</p>
             </div>
 
             <div class="review">
-                <h2>Assassin's Creed: Shadows</h2>
+                <h3>Assassin's Creed: Shadows</h3>
+                <img src="images/assassin_creed.jpg" alt="Assassin's Creed: Shadows" class="review-image">
                 <p>Assassin's Creed: Shadows leva os jogadores a uma nova era de assassinatos furtivos. Com gráficos impressionantes e uma história rica, é uma adição emocionante à série.</p>
                 <p><strong>Nota:</strong> ★★★★★</p>
             </div>
 
             <div class="review">
-                <h2>Star Wars Outlaws</h2>
+                <h3>Star Wars Outlaws</h3>
+                <img src="images/star_wars.jpg" alt="Star Wars Outlaws" class="review-image">
                 <p>Star Wars Outlaws coloca os jogadores no papel de um contrabandista em uma galáxia distante, oferecendo uma nova perspectiva sobre o universo de Star Wars. A jogabilidade é envolvente e repleta de ação.</p>
                 <p><strong>Nota:</strong> ★★★★★</p>
             </div>
 
-        </section>
-
-        <section id="gameplays">
-            <h2>Gameplays Recentes</h2>
-            <!-- Adicione informações sobre gameplays aqui -->
         </section>
     </main>
 
