--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             
             <div class="review">
                 <h3>Silent Hill 2 Remake</h3>
-                <img src="images/silent_hill.jpg" alt="Silent Hill 2 Remake" class="review-image">
+                <img src="images/silent-hill-2-remake.jpg" alt="Silent Hill 2 Remake" class="review-image">
                 <p>Silent Hill 2 Remake é uma reimaginação do clássico jogo de terror. Com gráficos impressionantes e uma narrativa envolvente, este remake traz de volta os horrores da cidade de Silent Hill com uma nova perspectiva.</p>
                 <p><strong>Nota:</strong> ★★★★★</p>
             </div>
