--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reviews de Jogos</title>
+    <title>GameHub</title>
     <link rel="stylesheet" href="Estilo.css"> <!-- Link para o CSS -->
 </head>
 <body>
     <header>
-        <h1>Reviews de Jogos</h1>
+        <h1>GameHub</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -20,7 +20,7 @@
     
     <main>
         <section id="reviews">
-            <h2>Reviews de Jogos</h2>
+            <h2>GameHub</h2>
             
             <div class="review">
                 <h3>Silent Hill 2 Remake</h3>
