--- a/Gameplays/Gameplays.html
+++ b/Gameplays/Gameplays.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gameplays - GameHub</title>
-    <link rel="stylesheet" href="Estilo.css">
+    <link rel="stylesheet" href="Estilo.css"> <!-- Link para o CSS -->
 </head>
 <body>
     <header>
-        <h1>Gameplays</h1>
+        <h1>GameHub - Gameplays</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -19,14 +19,28 @@
     </header>
     
     <main>
-        <h2>Bem-vindo à seção de Gameplays</h2>
-        <!-- Conteúdo das gameplays -->
+        <h2>Gameplays Recentes</h2>
+        <div class="gameplay">
+            <h3>Gameplay de Silent Hill 2 Remake</h3>
+            <video controls>
+                <source src="videos/silent_hill_2_remake.mp4" type="video/mp4">
+                Seu navegador não suporta a tag de vídeo.
+            </video>
+        </div>
+        <div class="gameplay">
+            <h3>Gameplay de Sonic x Shadow Generations</h3>
+            <video controls>
+                <source src="videos/sonic_shadow_generations.mp4" type="video/mp4">
+                Seu navegador não suporta a tag de vídeo.
+            </video>
+        </div>
+        <!-- Adicione mais gameplays conforme necessário -->
     </main>
 
     <footer>
         <p>&copy; 2024 Seu Nome. Todos os direitos reservados.</p>
     </footer>
     
-    <script src="JavaScript.js"></script>
+    <script src="Java Script.js"></script> <!-- Link para o JavaScript -->
 </body>
 </html>
