--- a/Reviews/Reviews.html
+++ b/Reviews/Reviews.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reviews - GameHub</title>
-    <link rel="stylesheet" href="Estilo.css">
+    <link rel="stylesheet" href="Estilo.css"> <!-- Link para o CSS -->
 </head>
 <body>
     <header>
-        <h1>Reviews</h1>
+        <h1>GameHub - Reviews</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -20,13 +20,13 @@
     
     <main>
         <h2>Bem-vindo à seção de Reviews</h2>
-        <!-- Conteúdo das reviews -->
+        <p>Aqui você encontrará análises detalhadas dos jogos mais recentes!</p>
     </main>
 
     <footer>
         <p>&copy; 2024 Seu Nome. Todos os direitos reservados.</p>
     </footer>
     
-    <script src="Java Script.js"></script>
+    <script src="Java Script.js"></script> <!-- Link para o JavaScript -->
 </body>
 </html>
