--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="review">Reviews</a></li>
+                <li><a href="#review">Reviews</a></li>
                 <li><a href="gameplays.html">Gameplays</a></li>
             </ul>
         </nav>
