criando id review

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section id="reviews">
             <h2>GameHub</h2>
             
-            <div class="review">
+            <div class="review" id = "review">
                 <h3>Silent Hill 2 Remake</h3>
                 <img src="images/silent-hill-2-remake.jpg" alt="Silent Hill 2 Remake" class="review-image">
                 <p>Silent Hill 2 Remake é uma reimaginação do clássico jogo de terror. Com gráficos impressionantes e uma narrativa envolvente, este remake traz de volta os horrores da cidade de Silent Hill com uma nova perspectiva.</p>
