--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#review">Reviews</a></li>
+                <li><a href="#reviews">Reviews</a></li>
                 <li><a href="gameplays.html">Gameplays</a></li>
             </ul>
         </nav>
@@ -22,7 +22,7 @@
         <section id="reviews">
             <h2>GameHub</h2>
             
-            <div class="review" id = "review">
+            <div class="review">
                 <h3>Silent Hill 2 Remake</h3>
                 <img src="images/silent-hill-2-remake.jpg" alt="Silent Hill 2 Remake" class="review-image">
                 <p>Silent Hill 2 Remake é uma reimaginação do clássico jogo de terror. Com gráficos impressionantes e uma narrativa envolvente, este remake traz de volta os horrores da cidade de Silent Hill com uma nova perspectiva.</p>
