--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <h1>GameHub</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="#index">Home</a></li>
                 <li><a href="#reviews">Reviews</a></li>
-                <li><a href="gameplays.html">Gameplays</a></li>
+                <li><a href="#gameplays">Gameplays</a></li>
             </ul>
         </nav>
     </header>
