--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#reviews">Reviews</a></li>
                 !-- mudei o href mas não funcionou ou o vercel esta demorando para atualizar
                 <li><a href="#gameplays">Gameplays</a></li>
-                <li><a href="#gameplays">Gameplays</a></li>
+                <li><a href="#gameplays">Teste</a></li>
             </ul>
         </nav>
     </header>
