--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     </header>
     
     <main>
+        <section id="index">
+            <h2>Home</h2>
+        </section>
         <section id="reviews2">
             <h2>Reviews</h2>
             
