--- a/index.html
+++ b/index.html
@@ -22,6 +22,24 @@
     <main>
         <section id="index">
             <h2>Home</h2>
+
+            <h2>Gameplays Recentes</h2>
+        <div class="gameplay">
+            <h3>Gameplay de Silent Hill 2 Remake</h3>
+            <video controls>
+                <source src="videos/silent_hill_2_remake.mp4" type="video/mp4">
+                Seu navegador não suporta a tag de vídeo.
+            </video>
+        </div>
+        <div class="gameplay">
+            <h3>Gameplay de Sonic x Shadow Generations</h3>
+            <video controls>
+                <source src="videos/sonic_shadow_generations.mp4" type="video/mp4">
+                Seu navegador não suporta a tag de vídeo.
+            </video>
+        </div>
+        <!-- Adicione mais gameplays conforme necessário -->
+         
         </section>
         <section id="reviews2">
             <h2>Reviews</h2>
