--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="#index">Home</a></li>
-                <li><a href="#reviews2">Reviews</a></li>
+                <li><a href="#reviews.html">Reviews</a></li>
                 <li><a href="#gameplays">Gameplays</a></li>
                 
             </ul>
