--- a/Reviewspasta/Reviews.html
+++ b/Reviewspasta/Reviews.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="">Reviews</a></li>
                 <li><a href="gameplays.html">Gameplays</a></li>
             </ul>
         </nav>
