--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </section>
         <section id="reviews2">
             <h2>Bem-vindo à seção de Reviews</h2>
-            <p>Aqui você encontrará análises detalhadas dos jogos mais recentes!</p>
-            <h2>Reviews</h2>
+            <h1>Aqui você encontrará análises detalhadas dos jogos mais recentes!</h1>
             
+            <h2>Reviews</h2>
             <div class="review">
                 <h3>Silent Hill 2 Remake</h3>
                 <img src="images/silent-hill-2-remake.jpg" alt="Silent Hill 2 Remake" class="review-image">
