--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
     <main>
         <section id="index">
             <h2>Home</h2>
+
         </section>
         <section id="reviews2">
             <h2>Bem-vindo à seção de Reviews</h2>
             <h1>Aqui você encontrará análises detalhadas dos jogos mais recentes!</h1>
-            
+
             <h2>Reviews</h2>
             <div class="review">
                 <h3>Silent Hill 2 Remake</h3>
@@ -67,6 +68,18 @@
 
         <section id="gameplays">
 
+            <h3>Gameplay de Silent Hill 2 Remake</h3>
+            <video controls>
+                <source src="videos/silent_hill_2_remake.mp4" type="video/mp4">
+                Seu navegador não suporta a tag de vídeo.
+            </video>
+        </div>
+        <div class="gameplay">
+            <h3>Gameplay de Sonic x Shadow Generations</h3>
+            <video controls>
+                <source src="videos/sonic_shadow_generations.mp4" type="video/mp4">
+                Seu navegador não suporta a tag de vídeo.
+            </video>
 
         </section>
     </main>
