--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </section>
 
         <section id="gameplays">
-
+            <div class="Gameplays"
             <h3>Gameplay de Silent Hill 2 Remake</h3>
             <video controls>
                 <source src="videos/silent_hill_2_remake.mp4" type="video/mp4">
@@ -80,7 +80,6 @@
                 <source src="videos/sonic_shadow_generations.mp4" type="video/mp4">
                 Seu navegador não suporta a tag de vídeo.
             </video>
-
         </section>
     </main>
 
