--- a/Gameplays/Gameplays.html
+++ b/Gameplays/Gameplays.html
@@ -23,7 +23,7 @@
         <div class="gameplay">
             <h3>Gameplay de Silent Hill 2 Remake</h3>
             <video controls>
-                <source src="videos/silent_hill_2_remake.mp4" type="video/mp4">
+                <source src="https://www.youtube.com/watch?v=D9sxTGlG7hc" type="video/mp4">
                 Seu navegador não suporta a tag de vídeo.
             </video>
         </div>
