--- a/index.html
+++ b/index.html
@@ -68,11 +68,8 @@
 
         <section id="gameplays">
             <div class="Gameplays"
-            <h3>Gameplay de Silent Hill 2 Remake</h3>
-            <video controls>
+            <h3>Gameplay de Silent Hill 2 Remake</h3
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/D9sxTGlG7hc?si=4OwUD-mRhOUo9WYh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                Seu navegador não suporta a tag de vídeo.
-            </video>
         </div>
         <div class="gameplay">
             <h3>Gameplay de Sonic x Shadow Generations</h3>
