--- a/Reviewspasta/Reviews.html
+++ b/Reviewspasta/Reviews.html
@@ -19,8 +19,8 @@
     </header>
     
     <main>
-        <h2>Bem-vindo à seção de Reviews</h2>
-        <p>Aqui você encontrará análises detalhadas dos jogos mais recentes!</p>
+        <h1>Bem-vindo à seção de Reviews</h1>
+        <h3>Aqui você encontrará análises detalhadas dos jogos mais recentes!</h3>
     </main>
 
     <footer>
