--- a/Gameplays/Gameplays.html
+++ b/Gameplays/Gameplays.html
@@ -23,7 +23,7 @@
         
         <div class="gameplay">
             <h3>Gameplay de Silent Hill 2 Remake</h3>
-            <iframe  width="560" height="315" src="https://www.youtube.com/embed/D9sxTGlG7hc?si=4OwUD-mRhOUo9WYh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/CÓDIGO_DO_VÍDEO" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <div class="gameplay">
