--- a/index.html
+++ b/index.html
@@ -65,18 +65,34 @@
             </div>
 
         </section>
-
         <section id="gameplays">
-            <div class="Gameplays"
-            <h3>Gameplay de Silent Hill 2 Remake</h3
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/D9sxTGlG7hc?si=4OwUD-mRhOUo9WYh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-        <div class="gameplay">
-            <h3>Gameplay de Sonic x Shadow Generations</h3>
-            <video controls>
-                <source src="videos/sonic_shadow_generations.mp4" type="video/mp4">
-                Seu navegador não suporta a tag de vídeo.
-            </video>
+            <h2>GameHub</h2>
+
+            <div class="gameplays">
+                <h3>Silent Hill 2 Remake</h3>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/CÓDIGO_DO_VÍDEO" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
+            <div class="gameplays">
+                <h3>Sonic x Shadow Generations</h3>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/CÓDIGO_DO_VÍDEO" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
+            <div class="gameplays">
+                <h3>Dragon Ball Sparking!</h3>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/CÓDIGO_DO_VÍDEO" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
+            <div class="gameplays">
+                <h3>Assassin's Creed: Shadows</h3>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/CÓDIGO_DO_VÍDEO" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
+            <div class="gameplays">
+                <h3>Star Wars Outlaws</h3>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/CÓDIGO_DO_VÍDEO" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
         </section>
     </main>
 
