--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <header class="animated-header"></header>
         <h1>GameHub</h1>
         <nav>
             <ul>
