--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="Estilo.css"> <!-- Link para o CSS -->
 </head>
 <body>
+    <div class="animated-background"></div>
     <header>
         <header class="animated-header"></header>
         <h1>GameHub</h1>
+        <header class="animated-header"></header>
         <nav>
             <ul>
                 <li><a href="#index">Home</a></li>
