--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="Estilo.css"> <!-- Link para o CSS -->
 </head>
 <body>
-    <div class="animated-background"></div>
     <header>
         <header class="animated-header"></header>
         <h1>GameHub</h1>
-        <header class="animated-header"></header>
+        <div class="background-pattern"></div>
         <nav>
             <ul>
                 <li><a href="#index">Home</a></li>
